@@ -4,11 +4,13 @@ import com.example.galaxy_sim.model.Particle;
 import com.example.galaxy_sim.simulation.Simulator;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
-import org.springframework.web.bind.annotation.*;
 import org.springframework.ui.Model;
+import org.springframework.web.bind.annotation.*;
+
+import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.HashMap;
 
 /**
  * REST controller for the galaxy simulation web interface.
@@ -16,12 +18,14 @@ import java.util.HashMap;
 @Controller
 public class SimulationController {
 	private final Simulator simulator;
-	private boolean isRunning = false;
+	private final SimulationSocketHandler socketHandler;
+	private volatile boolean isRunning = false;
 	private Thread simulationThread;
 
 	@Autowired
-	public SimulationController(Simulator simulator) {
+	public SimulationController(Simulator simulator, SimulationSocketHandler socketHandler) {
 		this.simulator = simulator;
+		this.socketHandler = socketHandler;
 	}
 
 	@GetMapping("/")
@@ -29,46 +33,11 @@ public class SimulationController {
 		return "index";
 	}
 
-	@GetMapping("/api/state")
-	@ResponseBody
-	public Map<String, Object> getSimulationState() {
-		Map<String, Object> state = new HashMap<>();
-		List<Particle> particles = simulator.getParticles();
-		if (particles == null) return state; // Return empty state if not initialized
-		List<Map<String, Object>> particleData = particles.stream().map(this::particleToMap).toList();
-		state.put("particles", particleData);
-		state.put("particleCount", particles.size());
-		state.put("currentTime", simulator.getCurrentTime());
-		state.put("timeScale", simulator.getTimeScale());
-		state.put("energy", simulator.getCurrentEnergy());
-		state.put("energyDrift", simulator.getEnergyDrift());
-		state.put("isRunning", isRunning);
-		state.put("fastForward", simulator.isFastForward());
-		if (simulator.isQuadtreeOverlayEnabled()) {
-			state.put("quadtreeBounds", simulator.getQuadtreeBounds());
-		}
-		double avgVelocity = particles.stream().mapToDouble(p -> Math.sqrt(p.vx() * p.vx() + p.vy() * p.vy())).average().orElse(0.0);
-		double avgDistanceToCenter = particles.stream().mapToDouble(Particle::distanceToSMBH).average().orElse(0.0);
-		state.put("avgVelocity", avgVelocity);
-		state.put("avgDistanceToCenter", avgDistanceToCenter);
-		return state;
-	}
-
-	private Map<String, Object> particleToMap(Particle particle) {
-		Map<String, Object> map = new HashMap<>();
-		map.put("x", particle.x());
-		map.put("y", particle.y());
-		map.put("mass", particle.mass());
-		map.put("type", particle.stellarType().toString());
-		return map;
-	}
-
 	@PostMapping("/api/start") @ResponseBody
 	public Map<String, Object> startSimulation() {
 		if (!isRunning) {
 			isRunning = true;
-			simulationThread = new Thread(this::runSimulation);
-			simulationThread.start();
+			simulationThread = Thread.ofVirtual().start(this::runSimulation);
 		}
 		return Map.of("status", "started", "isRunning", isRunning);
 	}
@@ -76,14 +45,20 @@ public class SimulationController {
 	@PostMapping("/api/pause") @ResponseBody
 	public Map<String, Object> pauseSimulation() {
 		isRunning = false;
-		if (simulationThread != null) simulationThread.interrupt();
+		if (simulationThread != null) {
+			simulationThread.interrupt();
+		}
+		broadcastState(); // Send a final state update on pause
 		return Map.of("status", "paused", "isRunning", isRunning);
 	}
 
 	@PostMapping("/api/reset") @ResponseBody
 	public Map<String, Object> resetSimulation() {
-		pauseSimulation();
+		if (isRunning) {
+			pauseSimulation();
+		}
 		simulator.reset();
+		broadcastState();
 		return Map.of("status", "reset");
 	}
 
@@ -124,28 +99,75 @@ public class SimulationController {
 		return Map.of("status", "updated");
 	}
 
+	private void broadcastState() {
+		Map<String, Object> state = new HashMap<>();
+		List<Particle> particles = simulator.getParticles();
+		if (particles == null) return;
+
+		List<Object> flatParticleData = new ArrayList<>(particles.size() * 3);
+		for (Particle p : particles) {
+			flatParticleData.add(p.x());
+			flatParticleData.add(p.y());
+			flatParticleData.add(p.stellarType() == Particle.StellarType.GIANT ? 1 : 0);
+		}
+		state.put("particles", flatParticleData);
+		state.put("particleCount", particles.size());
+		state.put("currentTime", simulator.getCurrentTime());
+		state.put("timeScale", simulator.getTimeScale());
+		state.put("energy", simulator.getCurrentEnergy());
+		state.put("energyDrift", simulator.getEnergyDrift());
+		state.put("isRunning", isRunning);
+		state.put("fastForward", simulator.isFastForward());
+		if (simulator.isQuadtreeOverlayEnabled()) {
+			state.put("quadtreeBounds", simulator.getQuadtreeBounds());
+		}
+		double avgVelocity = particles.stream().mapToDouble(p -> Math.sqrt(p.vx() * p.vx() + p.vy() * p.vy())).average().orElse(0.0);
+		double avgDistanceToCenter = particles.stream().mapToDouble(Particle::distanceToSMBH).average().orElse(0.0);
+		state.put("avgVelocity", avgVelocity);
+		state.put("avgDistanceToCenter", avgDistanceToCenter);
+
+		socketHandler.broadcast(state);
+	}
+
 	private void runSimulation() {
 		long lastRealTime = System.nanoTime();
 		final double MAX_STABLE_DT_YEARS = 10000.0;
 		final int MAX_SUB_STEPS_PER_FRAME = 250;
+		final long broadcastIntervalNanos = 50_000_000; // 50ms -> 20 FPS
+		long lastBroadcastTime = 0;
+
 		while (isRunning && !Thread.currentThread().isInterrupted()) {
 			try {
 				long currentRealTime = System.nanoTime();
 				double realWorldDeltaTime = (currentRealTime - lastRealTime) / 1_000_000_000.0;
 				lastRealTime = currentRealTime;
-				if (realWorldDeltaTime > 0.1) realWorldDeltaTime = 0.1;
+
 				double timeScale = simulator.getTimeScale();
 				double requestedFrameTime = realWorldDeltaTime * timeScale;
-				int numSubSteps = Math.max(1, (int) Math.ceil(requestedFrameTime / MAX_STABLE_DT_YEARS));
-				if (numSubSteps > MAX_SUB_STEPS_PER_FRAME) numSubSteps = MAX_SUB_STEPS_PER_FRAME;
-				double subStepDt = requestedFrameTime / numSubSteps;
+
+				int numSubSteps;
+				double subStepDt;
+
+				int neededSteps = (int) Math.ceil(requestedFrameTime / MAX_STABLE_DT_YEARS);
+
+				if (neededSteps > MAX_SUB_STEPS_PER_FRAME) {
+					numSubSteps = MAX_SUB_STEPS_PER_FRAME;
+					subStepDt = MAX_STABLE_DT_YEARS;
+				} else {
+					numSubSteps = Math.max(1, neededSteps);
+					subStepDt = requestedFrameTime / numSubSteps;
+				}
+
 				for (int i = 0; i < numSubSteps; i++) {
 					if (!isRunning) break;
 					simulator.step(subStepDt);
 				}
-				Thread.sleep(16);
-			} catch (InterruptedException e) {
-				Thread.currentThread().interrupt();
+
+				if (currentRealTime - lastBroadcastTime > broadcastIntervalNanos) {
+					broadcastState();
+					lastBroadcastTime = currentRealTime;
+				}
+
 			} catch (Exception e) {
 				e.printStackTrace();
 			}
